# DNS-Controller

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  config.yaml  go.mod  go.sum  main.go  main_test.go
.github/workflows/: publish.yml
internal/controller/: BUILD.bazel  controller.go  controller_test.go
resources/: manifest.yaml
tools/modules/: go.MODULE.bazel  go.module.bazel
